// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with one expenses 1`] = `
<h1>
  Viewing 
  1
   
  expense
  , Total 
  $0.9
</h1>
`;

exports[`should render with two expenses 1`] = `
<h1>
  Viewing 
  2
   
  expenses
  , Total 
  $0.9
</h1>
`;

exports[`should render without expenses 1`] = `
<h1>
  Viewing 
   
  expenses
  , Total 
  $0.0
</h1>
`;
